--- a/apps/drec-angular-ui/src/app/view/device/add-devices/add-devices.component.html
+++ b/apps/drec-angular-ui/src/app/view/device/add-devices/add-devices.component.html
@@ -37,7 +37,7 @@
                                 </div>
                                 <div>
                                     <button class="btn btn-danger danger-btn justify-content-end btn-sm"
-                                        (click)='deletePhone(i)'>
+                                        (click)='deletePhone(i)' *ngIf="deviceForms.controls.length>1">
                                         <mat-icon class="align-middle">delete</mat-icon>
                                     </button>
                                 </div>
@@ -50,7 +50,7 @@
                                     <div class="col-md-3">
                                         <mat-form-field appearance="outline">
                                             <mat-label class="text-capitalize">project Name</mat-label>
-                                            <input matInput autocomplete="off" placeholder="projectName"
+                                            <input matInput autocomplete="off" 
                                                 formControlName='projectName'>
                                             <!-- <mat-icon matSuffix>sentiment_very_satisfied</mat-icon> -->
                                             <!-- <mat-hint>Hint</mat-hint> -->
@@ -59,7 +59,7 @@
                                     <div class="col-md-3">
                                         <mat-form-field appearance="outline">
                                             <mat-label class="text-capitalize">External ID</mat-label>
-                                            <input matInput placeholder="name" formControlName='externalId'>
+                                            <input matInput  formControlName='externalId'>
                                             <!-- <mat-icon matSuffix>sentiment_very_satisfied</mat-icon> -->
                                             <!-- <mat-hint>contain only (a-zA-Z),(0 to 9),(-),(_) & spaces</mat-hint> -->
                                             <!-- <mat-error class="pb-3" *ngIf="checkValidation('email')">
@@ -109,7 +109,7 @@
                                     <div class="col-md-3">
                                         <mat-form-field appearance="outline">
                                             <mat-label class="text-capitalize">Capacity(kW)</mat-label>
-                                            <input matInput placeholder="capacity" type="number"
+                                            <input matInput  type="number"
                                                 formControlName='capacity' [min]=1 autocomplete="off">
                                             <!-- <mat-icon matSuffix>sentiment_very_satisfied</mat-icon> -->
                                             <!-- <mat-hint>Hint</mat-hint> -->
@@ -120,7 +120,7 @@
                                         <mat-form-field appearance="outline">
                                             <mat-label class="text-capitalize">off Taker</mat-label>
 
-                                            <mat-select formControlName='offTaker' placeholder="offTaker">
+                                            <mat-select formControlName='offTaker' >
 
                                                 <mat-option *ngFor="let code of offtaker" [value]="code">
                                                     {{code}}
@@ -133,7 +133,7 @@
                                         <mat-form-field appearance="outline">
                                             <mat-label class="text-capitalize">Fuel Code</mat-label>
 
-                                            <mat-select formControlName='fuelCode' placeholder="fuelCode">
+                                            <mat-select formControlName='fuelCode' >
 
                                                 <mat-option *ngFor="let code of fuellist" [value]="code.code">
                                                     {{code.name}}
@@ -146,7 +146,7 @@
                                         <mat-form-field appearance="outline">
                                             <mat-label class="text-capitalize">Device Type Code</mat-label>
 
-                                            <mat-select formControlName='deviceTypeCode' placeholder="deviceTypeCode">
+                                            <mat-select formControlName='deviceTypeCode' >
 
                                                 <mat-option *ngFor="let code of devicetypelist" [value]="code.code">
                                                     {{code.name}}
@@ -159,7 +159,7 @@
                                     <div class="col-md-3">
                                         <mat-form-field appearance="outline">
                                             <mat-label class="text-capitalize">impact Story</mat-label>
-                                            <input matInput placeholder="impactStory" formControlName='impactStory'
+                                            <input matInput  formControlName='impactStory'
                                                 autocomplete="off">
                                         </mat-form-field>
                                     </div>
@@ -169,7 +169,7 @@
                                             <mat-label class="text-capitalize">Device Description</mat-label>
 
                                             <mat-select formControlName='deviceDescription'
-                                                placeholder="deviceDescription">
+                                               >
 
                                                 <mat-option *ngFor="let code of devicedescription" [value]="code">
                                                     {{code}}
@@ -220,7 +220,7 @@
                                     <div class="col-md-3">
                                         <mat-form-field appearance="outline">
                                             <mat-label class="text-capitalize">Address</mat-label>
-                                            <input autocomplete="off" matInput placeholder="address"
+                                            <input autocomplete="off" matInput 
                                                 formControlName='address'>
                                             <!-- <mat-icon matSuffix>sentiment_very_satisfied</mat-icon> -->
                                             <!-- <mat-hint>Hint</mat-hint> -->
@@ -230,7 +230,7 @@
                                     <div class="col-md-3">
                                         <mat-form-field appearance="outline">
                                             <mat-label class="text-capitalize">Latitude</mat-label>
-                                            <input matInput placeholder="latitude" formControlName='latitude'>
+                                            <input matInput  formControlName='latitude'>
                                             <!-- <mat-icon matSuffix>sentiment_very_satisfied</mat-icon> -->
                                             <mat-error>please enter the valid value</mat-error>
                                         </mat-form-field>
@@ -239,7 +239,7 @@
                                     <div class="col-md-3">
                                         <mat-form-field appearance="outline">
                                             <mat-label class="text-capitalize">longitude</mat-label>
-                                            <input matInput placeholder="longitude" formControlName='longitude'>
+                                            <input matInput  formControlName='longitude'>
                                             <!-- <mat-icon matSuffix>sentiment_very_satisfied</mat-icon> -->
                                             <mat-error>please enter the valid value</mat-error>
                                         </mat-form-field>
@@ -248,7 +248,7 @@
                                     <div class="col-md-3">
                                         <mat-form-field appearance="outline">
                                             <mat-label class="text-capitalize">Quality Labels</mat-label>
-                                            <input matInput placeholder="qualityLabels" formControlName='qualityLabels'>
+                                            <input matInput  formControlName='qualityLabels'>
                                         </mat-form-field>
                                     </div>
 
@@ -258,8 +258,6 @@
                                     <div class="col-md-3 d-flex flex-column">
                                         <span>Grid Inter-connection:</span>
                                         <mat-radio-group formControlName='gridInterconnection'>
-                                            
-
                                             <mat-radio-button [value]=true>Yes</mat-radio-button>
                                             <mat-radio-button [value]=false>No</mat-radio-button>
                                         </mat-radio-group>
@@ -268,8 +266,6 @@
                                         <span>Energy Storage:</span>
                                         <mat-radio-group formControlName='energyStorage'
                                             (ngModelChange)="showenergycapacity_input(i,$event)">
-                                            
-
                                             <mat-radio-button [value]=true>Yes</mat-radio-button>
                                             <mat-radio-button [value]=false>No</mat-radio-button>
                                         </mat-radio-group>
@@ -279,8 +275,7 @@
                                     <div class="col-md-3" *ngIf="showinput[i]">
                                         <mat-form-field appearance="outline">
                                             <mat-label class="text-capitalize">Energy Storage Capacity</mat-label>
-                                            <input matInput autocomplete="off" placeholder="energyStorageCapacity"
-                                                type="number" formControlName='energyStorageCapacity'>
+                                            <input matInput autocomplete="off"  type="number" formControlName='energyStorageCapacity'>
                                         </mat-form-field>
                                     </div>
                                 </div>
