--- a/apps/drec-angular-ui/src/app/view/device/alldevices/alldevices.component.html
+++ b/apps/drec-angular-ui/src/app/view/device/alldevices/alldevices.component.html
@@ -11,10 +11,9 @@
       </div>
       <div>
         <button class="btn btn-dark justify-content-end px-4  d-flex align-items-center" routerLink="/device/add">
-          <mat-icon class="align-middle me-2">add_circle</mat-icon>Add New Devices</button>
+          <mat-icon class="align-middle me-2">add_circle</mat-icon>New Devices</button>
+          
       </div>
-
-
     </mat-card-header>
     <hr class="mt-0 pt-0">
 
