--- a/apps/drec-angular-ui/src/app/view/device/edit-device/edit-device.component.html
+++ b/apps/drec-angular-ui/src/app/view/device/edit-device/edit-device.component.html
@@ -314,8 +314,12 @@
                 <mat-card-footer>
                     <div class="example-container mt-3 row">
                         <div class="col-12 d-flex justify-content-end">
-                            <button type="submit" class="btn-primary btn text-capitalize px-4">submit</button>
+                            <button type="submit" class="btn-primary btn text-capitalize px-4">submit</button>&nbsp;&nbsp;
+                            <button class="btn btn-dark"  (click)="reset()">
+                                Cancel
+                              </button>
                         </div>
+                        
                     </div>
                 </mat-card-footer>
 
