--- a/apps/drec-angular-ui/src/app/view/meter-read/all-metereads/all-metereads.component.html
+++ b/apps/drec-angular-ui/src/app/view/meter-read/all-metereads/all-metereads.component.html
@@ -5,7 +5,7 @@
   
         <div>
           <mat-card-title>
-            <h2 class="pb-0 mb-0 fw-bold text-capitalize ps-2">List
+            <h2 class="pb-0 mb-0 fw-bold text-capitalize ps-2">Meter Read List
             </h2>
         </mat-card-title>
         </div>
