--- a/apps/drec-angular-ui/src/app/view/add-reservation/add-reservation.component.html
+++ b/apps/drec-angular-ui/src/app/view/add-reservation/add-reservation.component.html
@@ -88,8 +88,8 @@
                         <mat-radio-group formControlName='authorityToExceed'>
                             <span>Authority to Exceed:</span>
                             <br>
-                            <mat-radio-button [value]=true checked>True</mat-radio-button>
-                            <mat-radio-button [value]=false>False</mat-radio-button>
+                            <mat-radio-button [value]=true checked>Yes</mat-radio-button>
+                            <mat-radio-button [value]=false>No</mat-radio-button>
                         </mat-radio-group>
 
 
